--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,12 +50,15 @@ jobs:
 
       - name: Compile
         run:
-          ./mill -i __.compile
+          ./mill --no-server __.compile
 
       - name: Test
         run:
           # The -j1 is to workaround concurrency issues in older Mill version (0.8.0) when itest-ing
           ./mill --no-server -j1 --debug __.test
+
+      - name: Package
+        run: ./mill --no-server show __.publishArtifacts
 
   publish-sonatype:
     if: github.repository == 'scala-steward-org/mill-plugin' && contains(github.ref, 'refs/tags/')
