Fix artifactId of published modules (#95)
Version 0.18.1 was released with invalid artifactId of the form:
`scala-steward-mill-plugin_mill0.11_mill0.11_2.13`

Instead it should containt the platform suffix only once:
`scala-steward-mill-plugin_mill0.11_2.13`

Mill 0.12 slightly changed how platform suffixes get rendered, so we
need to adapt the build config.

Fix https://github.com/scala-steward-org/mill-plugin/issues/94

Pull request: https://github.com/scala-steward-org/mill-plugin/pull/95

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,10 @@ jobs:
 
       - name: Compile
         run:
-          ./mill -i __.compile
+          ./mill --no-server __.compile
+
+      - name: Package
+        run: ./mill --no-server show __.publishArtifacts
 
       - name: Test
         run:
